fix body and add overflow-y: auto;

--- a/src/components/LogIn.css
+++ b/src/components/LogIn.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 20px;
     background-color: #003366;
     color: #fff;
-}
+} */
 
 .login-container {
     max-width: 600px;
