--- a/src/components/Rules.css
+++ b/src/components/Rules.css
@@ -1,10 +1,10 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #003366;
     color: #333;
-  }
+  } */
   
   .rules-container {
     max-width: 800px;
