--- a/src/index.css
+++ b/src/index.css
@@ -22,14 +22,14 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+/* body {
   margin: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
   overflow: auto;
-}
+} */
 
 h1 {
   font-size: 3.2em;
